--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Website2</title>
+        <title>My Website</title>
         <meta charset="utf-8">
 <!--         <meta name="viewport" content="width=device-width"> -->
         <link rel="stylesheet" href="style.css"/>
