--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Website</title>
+        <title>My Website2</title>
         <meta charset="utf-8">
-<!--         <meta name="viewport" content="width=device-width"> -->
+        <meta name="viewport">
         <link rel="stylesheet" href="style.css"/>
         <script type="text/javascript"></script>
     </head>
