--- a/profile/profile.html
+++ b/profile/profile.html
@@ -10,7 +10,7 @@
                 <img src="profile.jpg"/>
                 <p class="name">James Liang</p>
                 <p class="email">9831070@nkust.edu.tw</p>
-                <p class="mobile">0917-174-731-2</p>
+                <p class="mobile">0917-174-731</p>
                 <div class="social">
                     <a href="https://www.facebook.com/profile.php?id=1731867300">
                         <i class="fab fa-facebook"></i>
